--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 spring.thymeleaf.cache=false  
 spring.resources.chain.cache=false
 spring.resources.chain.html-application-cache=false
 spring.resources.cache.cachecontrol.no-cache=true
- 
+
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 server.port=${PORT:8080}
- 
